# marino_bigdata_final

OneDrive/Documents/BigData/marino-mongodb/: .gitignore  README.md  mongodb_bigdata_dashboard.twb  pyproject.toml
OneDrive/Documents/BigData/marino-mongodb/marino_mongodb/: pipeline.py
